# scalable-fastapi

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
api/: .gitignore  docker-compose.yml  main.py  pyproject.toml  test_main.py
scalable_fastapi/: scalable_fastapi_stack.py
tests/unit/: test_scalable_fastapi_stack.py
