[tool.poetry]
name = "scalable-fastapi"
version = "0.1.0"
description = ""
authors = ["marianobrc <marianomartinez84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.2"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pytest = "^7.1.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
